fix: broken ui in shop page

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -40,6 +40,12 @@
 	font-style: normal;
 }
 
+*,
+*::before,
+*::after {
+	box-sizing: border-box;
+}
+
 html,
 body,
 #root,
